tests/NormalTests/paczka2/big_fuzzy/60839895.err
Error in line 7: jM8oqEy A23 33,3
Error in line 8: NsjdzO A243 7,2
Error in line 19: wdeUkN2ztA A23 7,8
Error in line 24: wdeUkN2ztA S974 16,4
Error in line 20: jM8oqEy A23 56,7
Error in line 34: jM8oqEy A243 87,10
Error in line 31: jM8oqEy S974 52,9
Error in line 43: QVR A23 46,3
Error in line 48: mji8xLHwF9 A243 87,0
Error in line 40: A23 S906 78,4
Error in line 54: wdeUkN2ztA S9R4 20,2
Error in line 42: jM8oqEy A243 130,5
Error in line 65: jM8oqEy S906 96,9
Error in line 79: QVR A243 16,4
Error in line 81: NsjdzO A243 68,6
Error in line 85: QVR S906 52,3
Error in line 88: mji8xLHwF9 S974 69,4
Error in line 94: QVR S974 170,8
Error in line 104: mji8xLHwF9 S906 20,52
Error in line 101: mji8xLHwF9 S906 5,5
Error in line 107: NsjdzO S974 81,72
Error in line 116: jM8oqEy A23 68,6
Error in line 118: NsjdzO S974 136,4
Error in line 149: Si4m3BD6J A243 44,4
Error in line 168: NsjdzO S974 243,6
Error in line 171: wdeUkN2ztA A243 56,8
Error in line 175: NsjdzO S974 59,1
Error in line 191: NsjdzO A23 74,5
Error in line 208: wdeUkN2ztA S974 73,4
Error in line 214: NsjdzO A243 14,48
Error in line 206: jM8oqEy S906 19,2
Error in line 228: mji8xLHwF9 A243 91,90
Error in line 221: wdeUkN2ztA A243 11,1
Error in line 230: wdeUkN2ztA A23 57,7
Error in line 235: A23 A243 65,9
Error in line 241: jM8oqEy A23 50,2
Error in line 229: mji8xLHwF9 A243 249,3
